<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/reply_header"
        android:layout_marginTop="@dimen/margin_vertical"
        android:layout_marginLeft="@dimen/margin_horizontal"
        android:layout_marginStart="@dimen/margin_horizontal"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        android:text="@string/reply_received"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
    </TextView>

    <TextView
        android:id="@+id/reply_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_horizontal"
        android:layout_marginStart="@dimen/margin_horizontal"
        android:layout_marginTop="@dimen/margin_horizontal"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reply_header"
        >
    </TextView>

    <Button
        android:id="@+id/button_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_vertical"
        android:layout_marginEnd="@dimen/margin_horizontal"
        android:layout_marginRight="@dimen/margin_horizontal"
        android:onClick="launchSecondActivity"
        android:text="@string/button_main_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextMain"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_vertical"
        android:layout_marginLeft="@dimen/margin_horizontal"
        android:layout_marginStart="@dimen/margin_horizontal"
        android:hint="@string/edit_text_main_hint"
        android:inputType="textLongMessage"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_main"
        app:layout_constraintStart_toStartOf="parent">

    </EditText>

</android.support.constraint.ConstraintLayout>